qmlui: started to work on project import
This required a bit of rework for checkable tree node propagation

--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -72,6 +72,7 @@
     <file alias="group.svg">group.svg</file>
     <file alias="help.svg">help.svg</file>
     <file alias="hidplugin.svg">hidplugin.svg</file>
+    <file alias="import.svg">import.svg</file>
     <file alias="inputoutput.svg">inputoutput.svg</file>
     <file alias="info.svg">info.svg</file>
     <file alias="intensity.svg">intensity.svg</file>
