fixture editor: UI changes to add/remove aliases

--- a/fixtureeditor/fixtureeditor.ui
+++ b/fixtureeditor/fixtureeditor.ui
@@ -586,6 +586,151 @@
        </item>
       </layout>
      </widget>
+     <widget class="QWidget" name="tab">
+      <attribute name="title">
+       <string>Aliases</string>
+      </attribute>
+      <layout class="QGridLayout" name="gridLayout_5">
+       <item row="0" column="0">
+        <layout class="QGridLayout" name="m_aliasGroup">
+         <item row="1" column="3">
+          <widget class="QComboBox" name="m_modeChannels">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="m_aliasModeLabel">
+           <property name="text">
+            <string>In mode</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QComboBox" name="m_modesCombo">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="6">
+          <widget class="QToolButton" name="m_addAliasButton">
+           <property name="toolTip">
+            <string>Add a new alias</string>
+           </property>
+           <property name="text">
+            <string notr="true"/>
+           </property>
+           <property name="icon">
+            <iconset resource="../ui/src/qlcui.qrc">
+             <normaloff>:/edit_add.png</normaloff>:/edit_add.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="4">
+          <widget class="QLabel" name="m_aliasOverrideLabel">
+           <property name="text">
+            <string>with</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="2">
+          <widget class="QLabel" name="m_aliasReplaceLabel">
+           <property name="text">
+            <string>replace channel</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0" colspan="8">
+          <widget class="QTreeWidget" name="m_aliasTree">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <attribute name="headerDefaultSectionSize">
+            <number>115</number>
+           </attribute>
+           <column>
+            <property name="text">
+             <string>Alias</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Mode</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Base channel</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Override channel</string>
+            </property>
+           </column>
+          </widget>
+         </item>
+         <item row="1" column="5">
+          <widget class="QComboBox" name="m_allChannels">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="7">
+          <widget class="QToolButton" name="m_removeAliasButton">
+           <property name="toolTip">
+            <string>Remove the currently selected alias</string>
+           </property>
+           <property name="text">
+            <string notr="true"/>
+           </property>
+           <property name="icon">
+            <iconset resource="../ui/src/qlcui.qrc">
+             <normaloff>:/edit_remove.png</normaloff>:/edit_remove.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>Alias</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1" colspan="7">
+          <widget class="QComboBox" name="m_aliasCapCombo"/>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
      <widget class="QWidget" name="Physical">
       <attribute name="title">
        <string>Physical</string>
