--- a/fixtureeditor/fixtureeditor.ui
+++ b/fixtureeditor/fixtureeditor.ui
@@ -650,7 +650,7 @@
          <item row="1" column="2">
           <widget class="QLabel" name="m_aliasReplaceLabel">
            <property name="text">
-            <string>replace channel</string>
+            <string>replace</string>
            </property>
           </widget>
          </item>
