--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -122,6 +122,7 @@
     <file alias="stopall.svg">stopall.svg</file>
     <file alias="stretch.svg">stretch.svg</file>
     <file alias="tilt.svg">tilt.svg</file>
+    <file alias="uncheck.svg">uncheck.svg</file>
     <file alias="undo.svg">undo.svg</file>
     <file alias="uniview.svg">uniview.svg</file>
     <file alias="unlock.svg">unlock.svg</file>
