resources: add scanner SVG icon

--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -108,6 +108,7 @@
     <file alias="rotate-right.svg">rotate-right.svg</file>
     <file alias="selectall.svg">selectall.svg</file>
     <file alias="sequence.svg">sequence.svg</file>
+    <file alias="scanner.svg">scanner.svg</file>
     <file alias="scene.svg">scene.svg</file>
     <file alias="script.svg">script.svg</file>
     <file alias="showmanager.svg">showmanager.svg</file>
