--- a/qmlui/qmlui.qrc
+++ b/qmlui/qmlui.qrc
@@ -59,7 +59,7 @@
     <file alias="PopupImportProject.qml">qml/popup/PopupImportProject.qml</file>
     <file alias="PopupPINRequest.qml">qml/popup/PopupPINRequest.qml</file>
     <file alias="PopupPINSetup.qml">qml/popup/PopupPINSetup.qml</file>
-    <file alias="PopupRenameFunctions.qml">qml/popup/PopupRenameFunctions.qml</file>
+    <file alias="PopupRenameItems.qml">qml/popup/PopupRenameItems.qml</file>
     <file alias="PopupDMXDump.qml">qml/popup/PopupDMXDump.qml</file>
     <file alias="PopupMonitor.qml">qml/popup/PopupMonitor.qml</file>
     <file alias="PopupNetworkClient.qml">qml/popup/PopupNetworkClient.qml</file>
@@ -112,7 +112,7 @@
     <file alias="RGBMatrixPreview.qml">qml/fixturesfunctions/RGBMatrixPreview.qml</file>
     <file alias="EFXEditor.qml">qml/fixturesfunctions/EFXEditor.qml</file>
     <file alias="EFXPreview.qml">qml/fixturesfunctions/EFXPreview.qml</file>
-    
+
     <!-- 3D View -->
     <file alias="3DView.qml">qml/fixturesfunctions/3DView/3DView.qml</file>
     <file alias="3DViewUnsupported.qml">qml/fixturesfunctions/3DView/3DViewUnsupported.qml</file>
