--- a/qmlui/qmlui.qrc
+++ b/qmlui/qmlui.qrc
@@ -112,6 +112,7 @@
     <file alias="RGBMatrixPreview.qml">qml/fixturesfunctions/RGBMatrixPreview.qml</file>
     <file alias="EFXEditor.qml">qml/fixturesfunctions/EFXEditor.qml</file>
     <file alias="EFXPreview.qml">qml/fixturesfunctions/EFXPreview.qml</file>
+    <file alias="ScriptEditor.qml">qml/fixturesfunctions/ScriptEditor.qml</file>
 
     <!-- 3D View -->
     <file alias="3DView.qml">qml/fixturesfunctions/3DView/3DView.qml</file>
